# gtkmm4

./: README.md
gtkmm4-1-0/: CMakeLists.txt
gtkmm4-1-0/src/: CMakeLists.txt  MyAppWindow.cpp  MyAppWindow.h  main.cpp
gtkmm4-1-1/: meson.build  meson.options
gtkmm4-1-1/src/: MainWindow.cpp  MainWindow.h  main.cpp  meson.build
gtkmm4-1-2/: meson.build
gtkmm4-1-2/data/: main.gresource.xml.in  meson.build
gtkmm4-1-2/locale/: POTFILES  es.po  fr.po  gtkmm4.pot  it.po
gtkmm4-1-2/src/: MainWindow.cpp  MainWindow.h  main.cpp
gtkmm4-1-3/: meson.build
gtkmm4-1-3/data/: builder.glade.blp  main.gresource.xml.in  meson.build
gtkmm4-1-3/locale/: POTFILES  meson.build  pr.po
gtkmm4-1-3/src/: MainWindow.cpp  MainWindow.h  main.cpp  meson.build
gtkmm4-1-4/: meson.build
gtkmm4-1-4/data/: main.gresource.xml.in  meson.build
gtkmm4-1-4/locale/: POTFILES  es.po  gtkmm4.pot  it.po  meson.build  pr.po
gtkmm4-1-4/scripts/: meson.build  touch.py
gtkmm4-1-4/src/: MainWindow.cpp  MainWindow.h  main.cpp
gtkmm4-1-5/: meson.build
gtkmm4-1-5/locale/: fr.po
gtkmm4-1-5/src/: MainWindow.cpp  meson.build
gtkmm4-1-6/: meson.build
gtkmm4-1-6/data/: builder.glade.blp  desktop.in.in
gtkmm4-1-6/locale/: POTFILES  es.po  fr.po  gtkmm4.pot  it.po  pr.po
gtkmm4-1-6/src/: MainWindow.h  main.cpp
gtkmm4-1-7/: meson.build
gtkmm4-1-7/data/: main.gresource.xml.in  meson.build
gtkmm4-1-7/locale/: POTFILES  fr.po  it.po  pr.po
gtkmm4-1-7/src/: MainWindow.cpp  MyButton.cpp  MyButton.h  meson.build
gtkmm4-1-8/: meson.build
gtkmm4-1-8/data/: main.gresource.xml.in
gtkmm4-1-8/locale/: LINGUAS  es.po  meson.build
gtkmm4-1-8/src/: MainWindow.cpp  MainWindow.h  main.cpp  meson.build
ytdlp4mm/: meson.build  meson_options.txt
ytdlp4mm-3/: meson.build
ytdlp4mm-3/data/: builder.glade.blp  main.gresource.xml.in  meson.build
ytdlp4mm-3/locale/: POTFILES  es.po  fr.po  it.po  pr.po  ytdlp4mm.pot
ytdlp4mm-3/src/: ItemEditorDlg.cpp  ItemEditorDlg.h  MainWindow.cpp  MainWindow.h  MyListStore.cpp  MyListStore.h  main.cpp  meson.build
ytdlp4mm/data/: main.gresource.xml.in  meson.build
ytdlp4mm/locale/: POTFILES  es.po  fr.po  gtkmm4.pot  it.po  meson.build  pr.po  ytdlp4mm.pot
ytdlp4mm/src/: MainWindow.cpp  MainWindow.h  MyListStore.cpp  MyListStore.h  main.cpp  meson.build
